Split admin area to a dedicated admin area

--- a/templates/admin/categories.mustache
+++ b/templates/admin/categories.mustache
@@ -1,3 +1,7 @@
+<div class="text-right">
+    <a href="{{config.wwwroot}}/local/marketplace/categories.php"></a>
+</div>
+
 <table class="table table-bordered table-hover">
     <thead class="thead-dark">
     <tr>
