--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,3 +1,7 @@
+<div class="header text-right mb-3">
+    <a href="" class="btn btn-info">My purchased products</a>
+</div>
+
 <div class="my-2">
     <div class="row">
         {{#products}}
