--- a/templates/admin/products.mustache
+++ b/templates/admin/products.mustache
@@ -30,16 +30,19 @@
                     <div class="card-body">
                         <h5 class="card-title">{{name}}</h5>
                         <p class="card-text">{{description}}</p>
-                        <span class="badge badge-secondary">{{#str}}price, local_marketplace{{/str}}: {{price}}</span>
-                        <span class="badge badge-secondary">{{#str}}stock, local_marketplace{{/str}}:
-                            {{#stock}}
-                                {{.}}
-                            {{/stock}}
-                            {{^stock}}
-                                {{#str}}unlimited, local_marketplace{{/str}}
-                            {{/stock}}
-                        </span>
-                    </div>
+                        {{#instock}}
+                            <span class="badge badge-secondary">{{#str}}stock, local_marketplace{{/str}}:
+                                {{#stock}}
+                                    {{.}}
+                                {{/stock}}
+                                {{^stock}}
+                                    {{#str}}unlimited, local_marketplace{{/str}}
+                                {{/stock}}
+                            </span>
+                        {{/instock}}
+                        {{^instock}}
+                            <span class="badge badge-warning">{{#str}}outofstock, local_marketplace{{/str}}</span>
+                        {{/instock}}
                     <div class="card-footer">
                         <a href="{{config.wwwroot}}/local/marketplace/admin/products.php?action=update&id={{id}}" class="btn btn-sm btn-info"><i class="fa fa-pencil"></i></a>
                         <form action="{{config.wwwroot}}/local/marketplace/admin/products.php?action=delete" method="POST" class="form-singlebutton">
@@ -67,8 +70,8 @@
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: '{{#str}}deleteitem_confirm_yes, local_marketplace{{/str}}',
-                cancelButtonText: '{{#str}}deleteitem_confirm_no, local_marketplace{{/str}}'
+                confirmButtonText: '{{#str}}confirm_yes, local_marketplace{{/str}}',
+                cancelButtonText: '{{#str}}confirm_no, local_marketplace{{/str}}'
             }).then(function(result) {
                 if (result.value) {
                     const form = button.closest("form");
