--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -27,6 +27,19 @@
                     <div class="card-body">
                         <h5 class="card-title">{{name}}</h5>
                         <p class="card-text">{{description}}</p>
+                        {{#instock}}
+                            <span class="badge badge-secondary">{{#str}}stock, local_marketplace{{/str}}:
+                                {{#stock}}
+                                    {{.}}
+                                {{/stock}}
+                                {{^stock}}
+                                    {{#str}}unlimited, local_marketplace{{/str}}
+                                {{/stock}}
+                            </span>
+                        {{/instock}}
+                        {{^instock}}
+                            <span class="badge badge-warning">{{#str}}outofstock, local_marketplace{{/str}}</span>
+                        {{/instock}}
                     </div>
                     <div class="card-footer d-flex">
                         <div class="info">
@@ -35,12 +48,47 @@
                             </div>
                             <div class="price">{{price}}</div>
                         </div>
-                        <div class="buttons ml-auto">
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy</a>
-                        </div>
+                        {{#instock}}
+                            <div class="buttons ml-auto">
+                                <form action="{{config.wwwroot}}/local/marketplace/buy.php" method="POST" class="form-singlebutton">
+                                    <input type="hidden" name="id" value="{{id}}">
+                                    <input type="hidden" name="courseid" value="{{courseid}}">
+                                    <button class="btn-buy btn btn-sm btn-danger"><i class="fa fa-shopping-cart"></i> {{#str}}buy, local_marketplace{{/str}}</button>
+                                </form>
+                            </div>
+                        {{/instock}}
                     </div>
                 </div>
             </div>
         {{/products}}
     </div>
 </div>
+
+{{#js}}
+    require(['jquery', 'local_marketplace/sweetalert'], function($, Swal) {
+        $("body").on("click", ".btn-buy", function(event) {
+            event.preventDefault();
+
+            var button = $(this);
+
+            Swal.fire({
+                title: '{{#str}}buy_confirm_title, local_marketplace{{/str}}',
+                text: '{{#str}}buy_confirm_msg, local_marketplace{{/str}}',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: '{{#str}}confirm_yes, local_marketplace{{/str}}',
+                cancelButtonText: '{{#str}}confirm_no, local_marketplace{{/str}}'
+            }).then(function(result) {
+                if (result.value) {
+                    const form = button.closest("form");
+
+                    form.append('<input type="hidden" name="sesskey" value="{{config.sesskey}}">');
+
+                    form.submit();
+                 }
+            });
+        });
+    });
+{{/js}}
