Creates my purchases page

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,5 +1,5 @@
 <div class="header text-right mb-3">
-    <a href="" class="btn btn-info">My purchased products</a>
+    <a href="{{config.wwwroot}}/local/marketplace/mypurchases.php?id={{courseid}}" class="btn btn-info"><i class="fa fa-shopping-bag"></i> {{#str}}mypurchases, local_marketplace{{/str}}</a>
 </div>
 
 <div class="my-2">
