Get admin index page data from database

--- a/templates/admin/index.mustache
+++ b/templates/admin/index.mustache
@@ -2,7 +2,7 @@
     <div class="col-md-4">
         <div class="small-box bg-2">
             <div class="inner">
-                <h3>835</h3>
+                <h3>{{total_orders}}</h3>
 
                 <p>{{#str}}orders, local_marketplace{{/str}}</p>
             </div>
@@ -14,7 +14,7 @@
     <div class="col-md-4">
         <div class="small-box bg-1">
             <div class="inner">
-                <h3>1</h3>
+                <h3>{{total_products}}</h3>
 
                 <p>{{#str}}products, local_marketplace{{/str}}</p>
             </div>
@@ -26,7 +26,7 @@
     <div class="col-md-4">
         <div class="small-box bg-3">
             <div class="inner">
-                <h3>5</h3>
+                <h3>{{total_categories}}</h3>
 
                 <p>{{#str}}categories, local_marketplace{{/str}}</p>
             </div>
