--- a/templates/admin/index.mustache
+++ b/templates/admin/index.mustache
@@ -36,3 +36,14 @@
         </div>
     </div>
 </div>
+
+<hr>
+
+<div class="row">
+    <div class="col-md-6">
+        {{{chart_line}}}
+    </div>
+    <div class="col-md-6">
+        {{{chart_pie}}}
+    </div>
+</div>
