--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -14,6 +14,9 @@
                                     <img class="d-block w-100" src="{{fileurl}}">
                                 </div>
                             {{/images}}
+                            {{#coursename}}
+                                <span class="ribbon"><i class="fa fa-star"></i> {{#str}}exclusivecourseproduct, local_marketplace{{/str}}</span>
+                            {{/coursename}}
                         </div>
                         <a class="carousel-control-prev" href="#images-{{id}}" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
