--- a/templates/courseorders.mustache
+++ b/templates/courseorders.mustache
@@ -1,3 +1,10 @@
+<div class="text-right">
+    <a href="{{config.wwwroot}}/local/marketplace/courseproducts.php?id={{courseid}}"
+    class="btn btn-primary">
+    {{#str}}courseproducts, local_marketplace{{/str}}
+    </a>
+</div>
+
 <h3 class="mb-4">{{#str}}courseorders, local_marketplace{{/str}}</h3>
 
 <div class="my-2">
