Show user groups in course purchases report

--- a/templates/courseorders.mustache
+++ b/templates/courseorders.mustache
@@ -18,7 +18,8 @@
                     <div class="info d-flex align-items-center">
                         <div class="content">
                             <h4 class="mb-0">{{fullname}}</h4>
-                            <small>{{email}}</small>
+                            <small class="d-block">{{email}}</small>
+                            <small class="font-weight-bold">{{usergroups}}</small>
                         </div>
                     </div>
                 </div>
